test/Feature/symsize/VectorOfSymbolicSize.cpp
// REQUIRES: not-msan
// Disabling msan because it times out on CI
// REQUIRES: libcxx
// REQUIRES: uclibc
// RUN: %clangxx %s -emit-llvm %O0opt -c -std=c++11 -I "%libcxx_include" -g -nostdinc++ -o %t1.bc
// RUN: rm -rf %t.klee-out
// RUN: %klee --output-dir=%t.klee-out --max-symsize=128 --libc=uclibc --libcxx %t1.bc 2>&1 | FileCheck %s

#include "klee/klee.h"
#include <vector>

int main() {
  int n = klee_int("n");
  std::vector<int> a(n);
}

// CHECK: std::length_error: vector
// CHECK: KLEE: done: completed paths = 1